// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`group Focus only group only Should skip all tests except \`only\` tests within the group 1`] = `
SuiteSummary {
  "errorCount": 4,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Focus only top level only should skip all tests except \`only\` tests 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Focus skip inside the group should skip only within the group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Focus skip inside the group should skip only within the group, not the next group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Focus skip inside the group skip(true) should skip only within the group 1`] = `
SuiteSummary {
  "errorCount": 5,
  "errors": [
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 5,
  "tests": {
    "f1": {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Focus skip outside of group Should skip \`skipped\` tests both inside and outside the group 1`] = `
SuiteSummary {
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "f1": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Multiple groups Should run the tests within the groups 1`] = `
SuiteSummary {
  "errorCount": 5,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`group Should run the tests within the group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
